include/Win32/Physics.NGDImport.hpp

struct TNewtonCollisionInfoRecord;
//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef System::Int8 *P2Char;
typedef System::Word *PUnsigned_short;
typedef void * PNewtonMesh;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonCollision;
typedef TNewtonCollisionInfoRecord *PNewtonCollisionInfoRecord;
struct DECLSPEC_DRECORD TNewtonCollisionInfoRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_offsetMatrix;
	TNewtonCollisionMaterial m_collisionMaterial;
	int m_collisionType;
	
public:
	union
	{
		struct 
		{
			TNewtonSceneCollisionParam sdSceneCollision;
		};
		struct 
		{
			TNewtonHeightFieldCollisionParam sdHeightfield;
		};
		struct 
		{
			TNewtonCollisionTreeParam sdTree;
		};
		struct 
		{
			TNewtonCompoundCollisionParam sdCompound;
		};
		struct 
		{
			
		};
		struct 
		{
			TNewtonConvexHullParam sdConvexhull;
		};
		struct 
		{
			TNewtonChamferCylinderParam sdChamfercylinder;
		};
		struct 
		{
			TNewtonCylinderParam sdCylinder;
		};
		struct 
		{
			TNewtonCapsuleParam sdCapsule;
		};
		struct 
		{
			TNewtonSphereParam sdSphere;
		};
		struct 
		{
			TNewtonConeParam shapedata;
		};
		struct 
		{
			TNewtonBoxParam sdbox;
		};
		
	};
};
typedef void __cdecl (*NewtonSerialize)(void * serializeHandle, const void * buffer, unsigned size);
typedef NewtonSerialize *PNewtonSerialize;
typedef void __cdecl (*NewtonDeserialize)(void * serializeHandle, void * buffer, unsigned size);
typedef NewtonDeserialize *PNewtonDeserialize;
typedef float __cdecl (*NewtonCollisionTreeRayCastCallback)(const void * Body, const void * TreeCollision, float interception, PdFloat normal, int faceId, void * usedData);
typedef NewtonCollisionTreeRayCastCallback *PNewtonCollisionTreeRayCastCallback;
typedef float __cdecl (*NewtonHeightFieldRayCastCallback)(const void * Body, const void * HeightFieldCollision, float interception, int Row, int Col, PdFloat normal, int faceId, void * usedData);
typedef NewtonHeightFieldRayCastCallback *PNewtonHeightFieldRayCastCallback;
typedef void __cdecl (*NewtonTreeCollisionCallback)(const void * bodyWithTreeCollision, const void * Body, int faceId, const PdFloat vertex, int vertexStrideInBytes);
typedef NewtonTreeCollisionCallback *PNewtonTreeCollisionCallback;
typedef void __cdecl (*NewtonCollisionIterator)(void * userData, int vertexCount, const PdFloat FaceArray, int faceId);
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" void * __cdecl NewtonCreateCollisionFromSerialization(const void * NewtonWorld, PNewtonDeserialize deserializeFunction, void * serializeHandle);
extern "C" void __cdecl NewtonCollisionSerialize(const void * NewtonWorld, const void * collision, PNewtonSerialize serializeFunction, void * serializeHandle);
extern "C" void __cdecl NewtonCollisionGetInfo(const void * collision, PNewtonCollisionInfoRecord collisionInfo);
extern "C" void * __cdecl NewtonCreateHeightFieldCollision(const void * NewtonWorld, int width, int height, int gridDiagonals, PUnsigned_short elevationMap, P2Char attributeMap, float horizontalScale, float verticalScale, int shapeID);
extern "C" void __cdecl NewtonHeightFieldSetUserRayCastCallback(const void * TreeCollision, PNewtonHeightFieldRayCastCallback rayHitCallback);
extern "C" void * __cdecl NewtonCreateTreeCollision(const void * NewtonWorld, int shapeID);
extern "C" void * __cdecl NewtonCreateTreeCollisionFromMesh(const void * NewtonWorld, const void * Mesh, int shapeID);
extern "C" void __cdecl NewtonTreeCollisionSetUserRayCastCallback(const void * TreeCollision, PNewtonCollisionTreeRayCastCallback rayHitCallback);
extern "C" void __cdecl NewtonTreeCollisionBeginBuild(const void * TreeCollision);
extern "C" void __cdecl NewtonTreeCollisionAddFace(const void * TreeCollision, int vertexCount, const PdFloat vertexPtr, int strideInBytes, int faceAttribute);
extern "C" void __cdecl NewtonTreeCollisionEndBuild(const void * TreeCollision, int optimize);
extern "C" int __cdecl NewtonTreeCollisionGetFaceAtribute(const void * TreeCollision, const System::PInteger faceIndexArray);
extern "C" void __cdecl NewtonTreeCollisionSetFaceAtribute(const void * TreeCollision, const System::PInteger faceIndexArray, int attribute);
extern "C" int __cdecl NewtonTreeCollisionGetVertexListIndexListInAABB(const void * TreeCollision, const PdFloat p0, const PdFloat p1, const PdFloat vertexArray, System::PInteger vertexCount, System::PInteger vertexStrideInBytes, const System::PInteger indexList, int maxIndexCount, const System::PInteger faceAttribute);
extern "C" void __cdecl NewtonStaticCollisionSetDebugCallback(const void * staticCollision, PNewtonTreeCollisionCallback userCallback);
extern "C" int __cdecl NewtonCollisionPointDistance(const void * NewtonWorld, const PdFloat point, const void * collision, const PdFloat matrix, PdFloat contact, PdFloat normal, int threadIndex);
extern "C" int __cdecl NewtonCollisionClosestPoint(const void * NewtonWorld, const void * collsionA, const PdFloat matrixA, const void * collisionB, const PdFloat matrixB, PdFloat contactA, PdFloat contactB, PdFloat normalAB, int threadIndex);
extern "C" int __cdecl NewtonCollisionCollide(const void * NewtonWorld, int maxSize, const void * collsionA, const PdFloat matrixA, const void * collisionB, const PdFloat matrixB, PdFloat contacts, PdFloat normals, PdFloat penetration, int threadIndex);
extern "C" int __cdecl NewtonCollisionCollideContinue(const void * NewtonWorld, int maxSize, const float timestep, const void * collsionA, const PdFloat matrixA, const PdFloat velocA, const float omegaA, const void * collsionB, const PdFloat matrixB, const PdFloat velocB, const float omegaB, PdFloat timeOfImpact, PdFloat contacts, PdFloat normals, PdFloat penetration, int threadIndex);
extern "C" void __cdecl NewtonCollisionSupportVertex(const void * collision, const PdFloat dir, PdFloat vertex);
extern "C" float __cdecl NewtonCollisionRayCast(const void * collision, const PdFloat p0, const PdFloat p1, PdFloat normals, System::PInteger attribute);
extern "C" void __cdecl NewtonCollisionCalculateAABB(const void * collision, const PdFloat matrix, PdFloat p0, PdFloat p1);
extern "C" void __cdecl NewtonCollisionForEachPolygonDo(const void * collision, const PdFloat matrix, NewtonCollisionIterator callback, void * userData);
extern "C" void __cdecl NewtonSetEulerAngle(const PdFloat eulersAngles, PdFloat matrix);
extern "C" void __cdecl NewtonGetEulerAngle(const PdFloat matrix, PdFloat eulersAngles);
extern "C" float __cdecl NewtonCalculateSpringDamperAcceleration(float dt, float ks, float x, float kd, float s);
extern "C" void * __cdecl NewtonCreateBody(const void * NewtonWorld, const void * collision, const PdFloat matrix);
extern "C" void __cdecl NewtonDestroyBody(const void * NewtonWorld, const void * Body);
extern "C" void __cdecl NewtonBodyAddForce(const void * Body, const PdFloat Force);
extern "C" void __cdecl NewtonBodyAddTorque(const void * Body, const PdFloat torque);
extern "C" void __cdecl NewtonBodyCalculateInverseDynamicsForce(const void * Body, float timestep, const PdFloat desiredVeloc, PdFloat forceOut);